Pantallas Homepage,About,Practice areas-Single y 404 Terminadas

--- a/html/About.html
+++ b/html/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
     <link rel="stylesheet" href="/Style/About.css">
     <link rel="stylesheet" href="/Style/style_footer.css".css>
     <link rel="stylesheet" href="/Style/style_header.css">
@@ -151,7 +151,7 @@
             <div class="Cuerpo_Derecha">
                 <article class="Derecha_Article">
                     <div class="img_Article"><img src="/imgs/Img-About/Balanza-mini.svg" alt=""></div>
-                    <div>
+                    <div class="Texto_Article">
                         <h3>Direct Way Of Justice</h3>
                         <p>when an unknown printer took a galley of type and scrambled it to make<br>
                              a type specimen book. It has survived not only five centuries, but also the<br>
@@ -159,8 +159,8 @@
                     </div>
                 </article>
                 <article class="Derecha_Article">
-                    <div><img src="/imgs/Img-About/Candado.svg" alt=""></div>
-                    <div>
+                    <div class="img_Article"><img src="/imgs/Img-About/Candado.svg" alt=""></div>
+                    <div class="Texto_Article">
                         <h3>Protecting Your Business</h3>
                         <p>when an unknown printer took a galley of type and scrambled it to make<br>
                              a type specimen book. It has survived not only five centuries, but also the<br>
@@ -168,8 +168,8 @@
                     </div>
                 </article>
                 <article class="Derecha_Article">
-                    <div><img src="/imgs/Img-About/Corazon.svg" alt=""></div>
-                    <div>
+                    <div class="img_Article"><img src="/imgs/Img-About/Corazon.svg" alt=""></div>
+                    <div class="Texto_Article">
                         <h3>Relationship Based On Trust</h3>
                         <p>when an unknown printer took a galley of type and scrambled it to make<br>
                              a type specimen book. It has survived not only five centuries, but also the<br>
@@ -177,8 +177,8 @@
                     </div>
                 </article>
                 <article class="Derecha_Article">
-                    <div><img src="/imgs/Img-About/Espadas.svg" alt=""></div>
-                    <div>
+                    <div class="img_Article"><img src="/imgs/Img-About/Espadas.svg" alt=""></div>
+                    <div class="Texto_Article">
                         <h3>Fight For Justice</h3>
                         <p>when an unknown printer took a galley of type and scrambled it to make<br>
                              a type specimen book. It has survived not only five centuries, but also the<br>
@@ -188,4 +188,226 @@
             </div>
         </div>
     </div>
+    <div class="Team">
+        <div class="Team_Cuerpo">
+            <div class="Team_Encabezado">
+                <h2>Our Experienced Attorney Are Ready<br>
+                    To answer any questions</h2>
+                    <img src="/imgs/Img-Homepage/Icon_Cruz.svg" alt="">
+            </div>
+            <div class="Team_Miembros">
+                <div class="Miembros_img">
+                    <div class="Imagen_Miembros">
+                        <img class="Thomas" src="/imgs/Img-Homepage/img-Thomas.png" alt="">
+                        <div class="Redes_Miembros">
+                            <div>
+                                <img src="/imgs/Img-Homepage/Insta.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Fb.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Twiter.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Pintrest.svg" alt="">
+                            </div>
+                            <hr>
+                            <h3>Thomas Daniyel<br><span>Civil Attorney</span></h3>
+                        </div>
+                    </div>
+                    <div class="Imagen_Miembros">
+                        <img class="Nikolona" src="/imgs/Img-Homepage/img-Nikolona.png" alt="">
+                        <div class="Redes_Miembros">
+                            <div>
+                                <img src="/imgs/Img-Homepage/Insta.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Fb.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Twiter.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Pintrest.svg" alt="">
+                            </div>
+                            <hr>
+                            <h3>Thomas Daniyel<br><span>Civil Attorney</span></h3>
+                        </div>
+                    </div>
+                    <div class="Imagen_Miembros">
+                        <img class="Michal" src="/imgs/Img-Homepage/img-Michal.png" alt="">
+                        <div class="Redes_Miembros">
+                            <div>
+                                <img src="/imgs/Img-Homepage/Insta.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Fb.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Twiter.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Pintrest.svg" alt="">
+                            </div>
+                            <hr>
+                            <h3>Thomas Daniyel<br><span>Civil Attorney</span></h3>
+                        </div>
+                    </div>
+                </div>
+                <button>Meet Attorney</button>
+            </div>
+        </div>
+    </div>
+    <div class="Client_Opinions">
+        <div class="Client_Cuerpo">
+            <div class="Client_Encabezado">
+                <h2>Client Opinions & Reviews</h2>
+                <img src="/imgs/Img-Homepage/Icon_Cruz.svg" alt="">
+            </div>
+            <div class="Client_Testimonial">
+                <div class="Client_Inverso">
+                    <div class="Inverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                    <div class="Persona_Inverso">
+                        <img src="/imgs/Img-Homepage/img-Nattasha.png" alt="">
+                        <h4>Nattasha<br><span>Junior Lawyer</span></h4>
+                    </div>
+                </div>
+                <div class="Client_Reverso">
+                    <div class="Persona_Reverso">
+                        <img src="/imgs/Img-Homepage/img-Minci.png" alt="">
+                        <h4>Minci pall<br><span>Consultant</span></h4>
+                    </div>
+                    <div class="Reverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                </div>
+                <div class="Client_Inverso">
+                    <div class="Inverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                    <div class="Persona_Inverso">
+                        <img src="/imgs/Img-Homepage/img-Julia.png" alt="">
+                        <h4>Julia Rose<br><span>Consultant</span></h4>
+                    </div>
+                </div>
+                <div class="Client_Reverso">
+                    <div class="Persona_Reverso">
+                        <img src="/imgs/Img-Homepage/img-John.png" alt="">
+                        <h4>John David<br><span>Designer</span></h4>
+                    </div>
+                    <div class="Reverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Counters">
+        <div class="Counters_logos">
+            <img class="Logo-Encabezado" src="/imgs/Img-Homepage/Title-Logos.png" alt="">
+            <div class="Logos">
+                <img src="/imgs/Img-Homepage/Logo_Home.png" alt="">
+                <img src="/imgs/Img-Homepage/Logo_Vs.png" alt="">
+                <img src="/imgs/Img-Homepage/Logo_Brand.png" alt="">
+                <img src="/imgs/Img-Homepage/Logo_Nature.png" alt="">
+                <img src="/imgs/Img-Homepage/Logo_Classic.png" alt="">
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer">
+            <div class="Footer_Encabezado">
+                <img src="/imgs/Img-Footer/Encabezado_Footer.png" alt="">
+            </div>
+            <div class="Footer_Medio">
+                <div class="Container Quick">
+                    <div class="Titulos_Footer">
+                        <hr>
+                        <h3>Quick Link</h3>
+                        <hr>
+                    </div>
+                    <div class="Quick_Cuerpo">
+                        <div class="Quicks Izquierda">
+                            <a>Home</a>
+                            <a>About</a>
+                            <a>Contact</a>
+                            <a>Blog</a>
+                            <a>Blog Post</a>
+                            <a>Lawyers</a>
+                        </div>
+                        <div class="Quicks Derecha">
+                            <a>Lawyer Single</a>
+                            <a>Case Results</a>
+                            <a>Practice Areas</a>
+                            <a>Packages</a>
+                            <a>Package Single</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="Container Utility">
+                    <div class="Titulos_Footer">
+                        <hr>
+                        <h3>Utility Page</h3>
+                        <hr>
+                    </div>
+                    <div class="Cuerpo Utility">
+                        <a>Star Here</a>
+                        <a>Style Guide</a>
+                        <a>404 Not Found</a>
+                        <a>Password Protected</a>
+                        <a href="">Licenses</a>
+                        <a href="">Changelog</a>
+                    </div>
+                </div>
+                <div class="Container Practice">
+                    <div class="Titulos_Footer">
+                        <hr>
+                        <h3>Practice Area</h3>
+                        <hr>
+                    </div>
+                    <div class="Cuerpo Practice">
+                        <a>Family Law</a>
+                        <a>Criminal Law</a>
+                        <a>Personal Injury</a>
+                        <a>Real Estate Law</a>
+                        <a href="">Bussines Law</a>
+                    </div>
+                </div>
+                <div class="Container Contact">
+                    <div class="Titulos_Footer">
+                        <hr>
+                        <h3>Contact Us</h3>
+                        <hr>
+                    </div>
+                    <div class="Contact_Cuerpo">
+                        <h4>Head Office Address 121 King Street,<br><br>Melbourne West,Australia</h4>
+                        <h4>Phone: (011) 9876 54321<br><br>Email:Info@Example.com</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="Footer_Final">
+                <hr>
+                <div class="Final_Cuerpo">
+                    <h3 class="Copyright">Copyright © <span>Attorney Law</span> | Designed by <span>VictorFlow Templates</span> - Powered by Webflow</h3>
+                    <div class="Redes">
+                        <h4>Follow:</h4>
+                        <img src="/imgs/Img-Footer/Insta.png" alt="">
+                        <img src="/imgs/Img-Footer/Fb.png" alt="">
+                        <img src="/imgs/Img-Footer/Twiter.png" alt="">
+                        <img src="/imgs/Img-Footer/Pintrest.png" alt="">
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </div>
+    </footer>
 </body>
