--- a/html/Index.html
+++ b/html/Index.html
@@ -28,10 +28,10 @@
                     </div>
                     <div class="header_Links">
                         <div class="Links_Principales">
-                            <a href="">Home</a>
-                            <a href="">Abouts Us</a>
+                            <a href="Index.html">Home</a>
+                            <a href="About.html">Abouts Us</a>
                             <a href="">Pages <img src="/imgs/Img-Header/Flecha-Abajo.png" alt=""></a>
-                            <a href="">Contact Us</a>
+                            <a href="contact.html">Contact Us</a>
                         </div>
                         <div class="Email_Call">
                             <div class="Cell">
@@ -579,17 +579,17 @@
                     </div>
                     <div class="Quick_Cuerpo">
                         <div class="Quicks Izquierda">
-                            <a>Home</a>
-                            <a>About</a>
-                            <a>Contact</a>
-                            <a>Blog</a>
+                            <a href="Index.html">Home</a>
+                            <a href="About.html">About</a>
+                            <a href="contact.html">Contact</a>
+                            <a href="Blog.html">Blog</a>
                             <a>Blog Post</a>
                             <a>Lawyers</a>
                         </div>
                         <div class="Quicks Derecha">
                             <a>Lawyer Single</a>
-                            <a>Case Results</a>
-                            <a>Practice Areas</a>
+                            <a href="cases.html">Case Results</a>
+                            <a href="Practies Area.html">Practice Areas</a>
                             <a>Packages</a>
                             <a>Package Single</a>
                         </div>
@@ -604,10 +604,10 @@
                     <div class="Cuerpo Utility">
                         <a>Star Here</a>
                         <a>Style Guide</a>
-                        <a>404 Not Found</a>
-                        <a>Password Protected</a>
-                        <a href="">Licenses</a>
-                        <a href="">Changelog</a>
+                        <a href="404.html">404 Not Found</a>
+                        <a href="passwor.html">Password Protected</a>
+                        <a href="Lisences.html">Licenses</a>
+                        <a href="Change_log.html">Changelog</a>
                     </div>
                 </div>
                 <div class="Container Practice">
@@ -621,7 +621,7 @@
                         <a>Criminal Law</a>
                         <a>Personal Injury</a>
                         <a>Real Estate Law</a>
-                        <a href="">Bussines Law</a>
+                        <a href="Practies Single.html">Bussines Law</a>
                     </div>
                 </div>
                 <div class="Container Contact">
